test-suite/tests/snapshots/cli_kte_tests__kte4001_empty_selector_list.snap
---
source: test-suite/tests/cli_kte_tests.rs
expression: result.stderr
---
KLX9001

  × unknown lexing error: expected identifier, found end of token stream
   ╭─[./tmp/cli_test_kte4001_empty_selector_list/pkg/schema/types.ks:3:11]
 1 │ namespace types;
 2 │ 
 3 │ struct User {
   ·           ┬
   ·           ╰── unknown lexing error: expected identifier, found end of token stream
 4 │     id: u64,
 5 │     name: str
 6 │ };
 7 │ 
 8 │ type EmptyUser = Pick[User, ];
   ╰────
